Replaced current implementation with fork & join task